force-app/main/default/objects/Krow__Job_Order__c/Krow__Job_Order__c.object-meta.xml
<CustomObject>
    <label>Job Order</label>
    <nameField>
        <displayFormat>JO-{0000}</displayFormat>
        <label>Job Order No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>