force-app/main/default/objects/Krow__Job_Order__c/fields/Krow__Description__c.field-meta.xml
<CustomField>
    <fullName>Krow__Description__c</fullName>
    <label>Description</label>
    <length>130768</length>
    <type>Html</type>
</CustomField>