force-app/main/default/objects/Krow__Job_Order__c/fields/Krow__Post_Externally__c.field-meta.xml
<CustomField>
    <fullName>Krow__Post_Externally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Externally</label>
    <type>Checkbox</type>
</CustomField>