force-app/main/default/objects/Krow__Job_Order__c/fields/Krow__Region2__c.field-meta.xml
<CustomField>
    <fullName>Krow__Region2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>Krow__Region__c</referenceTo>
    <relationshipLabel>Job Orders</relationshipLabel>
    <relationshipName>Job_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>