force-app/main/default/objects/Krow__Job_Order__c/fields/Krow__Title__c.field-meta.xml
<CustomField>
    <fullName>Krow__Title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>