force-app/main/default/objects/Krow__Job_Order__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>NAME</columns>
    <columns>Krow__Title__c</columns>
    <columns>Krow__Description__c</columns>
    <columns>Krow__Start_Date__c</columns>
    <columns>Krow__End_Date__c</columns>
    <columns>Krow__Status__c</columns>
    <columns>Krow__Location2__c</columns>
    <columns>Krow__Post_Externally__c</columns>
    <columns>Krow__Post_Internally__c</columns>
    <columns>Krow__Hours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>